--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <section class="gallery">
         <img
-          src="/img/dp.png"
+          src="img/dp.png"
           alt="Detectie Pikachu with a gun looking smug, saying Hey Tim guess what I got"
         />
       </section>
